[gd_scene load_steps=13 format=3 uid="uid://cesbgdet70qpa"]

[ext_resource type="Theme" uid="uid://cmh2yrw27laau" path="res://Theme/ControlPanel.tres" id="1"]
[ext_resource type="FontFile" uid="uid://cmhfa7o0n0tfs" path="res://Theme/Inconsolata-VariableFont_wdth,wght.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://ddh11re4ldgry" path="res://ControlPanel/Assets/ControlPanelBackground.png" id="2_ui86l"]
[ext_resource type="Script" path="res://ControlPanel/Rotation box.gd" id="3"]
[ext_resource type="Script" path="res://ControlPanel/FuelGauge.gd" id="4"]
[ext_resource type="PackedScene" path="res://ControlPanel/BoosterReleaseButton.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://mulr3lwdi75n" path="res://ControlPanel/GasGauge.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://c5pf5wratwal1" path="res://ControlPanel/PreFlightButtons.tscn" id="8_v1oml"]
[ext_resource type="Script" path="res://ControlPanel/SwitchArray.gd" id="10"]
[ext_resource type="PackedScene" uid="uid://b5yw8tsylg8g6" path="res://ControlPanel/Switch.tscn" id="11"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="ControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 480.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_ui86l")

[node name="OrientationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 154.0
offset_right = 927.0
offset_bottom = 172.0
text = "Orientation"
horizontal_alignment = 1

[node name="InFlightLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 447.0
offset_right = 927.0
offset_bottom = 465.0
text = "In-flight actions"
horizontal_alignment = 1

[node name="ReleaseLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 633.0
offset_right = 442.0
offset_bottom = 651.0
text = "Attachment release"
horizontal_alignment = 1

[node name="PressureLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 350.0
offset_right = 442.0
offset_bottom = 368.0
text = "Fuel"
horizontal_alignment = 1

[node name="FuelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 15.0
offset_right = 927.0
offset_bottom = 33.0
text = "Fuel"
horizontal_alignment = 1

[node name="PreFlightChecksLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 15.0
offset_right = 442.0
offset_bottom = 33.0
text = "Pre-flight checks"
horizontal_alignment = 1

[node name="RotationBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 159.0
offset_top = 222.0
offset_right = 272.0
offset_bottom = 285.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)
script = ExtResource("3")

[node name="RotationLabel" type="Label" parent="RotationBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "-140"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AngleLabel" type="Label" parent="RotationBox"]
layout_mode = 0
offset_left = 0.5
offset_top = -18.0
offset_right = 112.5
text = "Rotation"

[node name="ColorRect" type="ColorRect" parent="RotationBox"]
layout_mode = 0
offset_left = -72.0
offset_right = -9.0
offset_bottom = 63.0
color = Color(1, 0.890196, 0, 1)

[node name="Label" type="Label" parent="RotationBox/ColorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
text = "Q"

[node name="ColorRect2" type="ColorRect" parent="RotationBox"]
layout_mode = 0
offset_left = 122.5
offset_right = 185.5
offset_bottom = 63.0
color = Color(1, 0.890196, 0, 1)

[node name="Label" type="Label" parent="RotationBox/ColorRect2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
text = "E"

[node name="Label" type="Label" parent="RotationBox"]
layout_mode = 0
offset_left = 2.5
offset_top = 74.0
offset_right = 42.5
offset_bottom = 92.0
text = "Strength"

[node name="StrengthLabel" type="Label" parent="RotationBox/Label"]
layout_mode = 0
offset_left = 14.0
offset_top = 22.0
offset_right = 54.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="RotationBox"]
layout_mode = 0
offset_left = 4.5
offset_top = 120.0
offset_right = 44.5
offset_bottom = 138.0
text = "Correction"

[node name="CorrectionLabel" type="Label" parent="RotationBox/Label2"]
layout_mode = 0
offset_left = 14.0
offset_top = 27.0
offset_right = 54.0
offset_bottom = 45.0

[node name="FuelGauge" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = 43.0
offset_right = -67.0
offset_bottom = -803.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4")

[node name="FuelLevel" type="ColorRect" parent="FuelGauge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="SwitchArray" type="Control" parent="."]
anchors_preset = 0
offset_left = 508.0
offset_top = 485.0
offset_right = 878.0
offset_bottom = 851.0
script = ExtResource("10")

[node name="SwitchGrid" type="GridContainer" parent="SwitchArray"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Switch" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Switch2" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Switch3" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Switch4" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Switch5" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Switch6" parent="SwitchArray/SwitchGrid" instance=ExtResource("11")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SwitchArrayTimer" type="Timer" parent="SwitchArray"]
wait_time = 3.0

[node name="PreFlightButtons" parent="." instance=ExtResource("8_v1oml")]
layout_mode = 0
offset_left = 76.0
offset_top = 102.0
offset_right = 445.0
offset_bottom = 311.0

[node name="GasGauge" parent="." instance=ExtResource("7")]
layout_mode = 0
offset_left = 30.0
offset_top = 421.0
offset_right = 425.0
offset_bottom = 546.0

[node name="BoosterRelease" parent="." instance=ExtResource("6")]
anchors_preset = 0
offset_left = 41.0
offset_top = 671.0
offset_right = 211.0
offset_bottom = 841.0
release_num = 1
release_time = 8.0
button_text = "Release boosters"

[node name="FuelRelease" parent="." instance=ExtResource("6")]
anchors_preset = 0
offset_left = 258.0
offset_top = 672.0
offset_right = 428.0
offset_bottom = 842.0
release_num = 2
release_time = 13.0
button_text = "Release fuel"

[connection signal="timeout" from="SwitchArray/SwitchArrayTimer" to="SwitchArray" method="_on_SwitchArrayTimer_timeout"]
